fixed news section appearing behind landing page background vid

--- a/valorant/src/components/LandingPage.css
+++ b/valorant/src/components/LandingPage.css
@@ -1,5 +1,6 @@
-/* .lp-master{
-} */
+.lp-master {
+  margin-bottom: 20.25rem;
+}
 
 .lp {
   display: flex;
