--- a/valorant/src/components/News.css
+++ b/valorant/src/components/News.css
@@ -1,64 +1,60 @@
-.n-master{
-    background-color: #e4e2da;  
+/* .n-master {
+  background-color: #e4e2da;
+} */
+
+.n-text {
+  display: flex;
 }
 
-.n-text{
-    display: flex;
+.n-text a {
+  float: right;
+  padding-top: 150px;
+  text-decoration: none;
+  color: #ff4655;
+  font-family: "DIN Next W1G";
+  text-transform: uppercase;
+  font-size: 1rem;
+  margin-left: 300px;
 }
 
-.n-text a{
-    float: right;
-    padding-top: 150px;
-    text-decoration: none;
-    color: #FF4655;
-    font-family: "DIN Next W1G" ;
-    text-transform: uppercase;
-    font-size: 1rem;
-    margin-left: 300px;
+h3 {
+  color: rgb(39, 39, 39);
 }
 
-
-h3{
-    color: rgb(39, 39, 39);
+.n-images {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* margin: 10px 120px 10px 120px; */
+  object-fit: cover;
+  /* padding-bottom: 100px; */
 }
 
-.n-images{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 10px 120px 10px 120px;
-    object-fit: cover;
-    padding-bottom: 100px;
- 
+.n-main h1 {
+  font-family: "DIN Next LT Pro Bold", Arial, Helvetica, sans-serif;
+  color: #ff4655;
+  font-size: 4.5rem;
+  /* margin-top: 100px; */
+  /* padding-top: 0px; */
+  font-weight: 900;
+  text-shadow: none;
+  /* margin-left: 100px; */
 }
 
-.n-main h1{
-    font-family:"DIN Next LT Pro Bold", Arial, Helvetica, sans-serif ;
-    color: #FF4655;
-    font-size: 4.5rem;
-    margin-top: 100px;
-    padding-top: 0px;
-    font-weight: 900;
-    text-shadow: none;
-    margin-left: 100px;
-
+.n1 {
+  text-transform: uppercase;
+  /* display: "flexbox"; */
+  /* object-fit: cover; */
+  line-height: 1.4;
 }
 
-.n1{
-    text-transform: uppercase;
-    display: "flexbox";
-    /* object-fit: cover; */
-    line-height: 1.4;
+h5 {
+  /* margin-top: 20px;
+  margin-bottom: 20px; */
 }
 
-h5{
-    margin-top: 20px;
-    margin-bottom: 20px;
+h5 span {
+  color: #ff4655;
+  font-weight: bolder;
+  /* margin-left: 40px; */
 }
-
-h5 span{
-    color: #FF4655;
-    font-weight: bolder;
-    margin-left: 40px;
-}
-
